syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

package mail;
option go_package = "./handler";

message Email {
  string value = 1;
}

message Nothing {
  bool dummy = 1;
}

message ResumePreview {
  uint64 id = 1;
  uint64 user_account_id = 2;
  string image = 3;
  string applicantName = 4;
  string applicantSurname = 5;
  string title = 6;
  string location = 7;

}

message VacancyPreview {
  uint64 id = 1;
  string image = 2;
  string title = 3;
}

message ApplicantMailingData {
  repeated string emails = 1;
  repeated VacancyPreview vac = 2;
}

message EmployerMailingData {
  repeated string emails = 1;
  repeated ResumePreview emp = 2;
}

service MailService {
  rpc SendConfirmCode (Email) returns (Nothing) {}
  rpc SendApplicantMailing (ApplicantMailingData) returns (Nothing) {}
  rpc SendEmployerMailing (EmployerMailingData) returns (Nothing) {}
}
